--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "__comment__": "change to the real link in the proxy field and delete this comment",
-  "proxy": "http://localhost:5000",
+  "homepage": "https://j-panchenko.github.io/portfolio",
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
@@ -31,6 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint --fix --ext .ts,.tsx src",
     "generate": "plop"
   },
@@ -55,6 +56,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "plop": "^3.1.2",
     "typescript": "^4.9.5"
   }
