--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,8 @@
     "no-multi-spaces": "warn",
     "no-useless-escape": "off",
     "no-proto": "off",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["warn"],
     "no-console": "warn",
     "prefer-const": "warn",
     "react-hooks/exhaustive-deps": "off",
