--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/poppins": "^5.0.8",
     "@hookform/resolvers": "^3.1.0",
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
